--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     height: auto;
 }
 
-body { /* set background of landing to hex colour & max height 100% */
+body { /* set background of landing to hex colour & max height of body 100% */
     background-color: #d9dcd6;
     max-width: 100%;
 }
@@ -40,15 +40,13 @@ body { /* set background of landing to hex colour & max height 100% */
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     font-size: 20px; 
     position: relative;
-    justify-content:space-between;
-    align-items:center;  
+    justify-content:space-between;   
 }
 
 .header nav ul {
     list-style-type: none; /* No bullet points */
     float: right; /* float links to right side of nav bar */
-    padding-top: 20px; 
-    padding-right: 20px;
+    padding: 20px 20px; /* Padding top & right*/
     
 }
 
@@ -62,15 +60,13 @@ body { /* set background of landing to hex colour & max height 100% */
 a {
     color: #ffffff; /* Set links text colour to white */
     text-decoration: none; /* No underline for links */
-    margin-bottom: 100px;
-   
 }
 
 
 .side-bar {
     text-align: center; /* Set all text in centre of aside section */
     font-size: 16px;
-    padding-bottom: 13px;
+    padding-bottom: 6px; /* padding under blocks of content */
 
 }
 
@@ -78,7 +74,7 @@ a {
     height: 800px; /* Set height of contents to 800 px; */
     width: 100%; /* Set contents to width of page */
     margin-bottom: 25px; /* Space below section */
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("../images/digital-marketing-meeting.jpg"); /* Hero image */
     background-size: cover; /*  the background image will always fit the whole secion */
 }
 
@@ -105,6 +101,9 @@ a {
     width: 20%;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     background-color: #2589bd;
+    margin-bottom: 32px;
+    color: #ffffff;
+    
 }
 
 .benefit-lead {
@@ -127,33 +126,18 @@ a {
     text-align: center; /* Set text in centre of section */
 }
 
-.benefit-brand h3 {
+.benefits h3 {
     margin-bottom: 10px; 
     text-align: center;
+
 }
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefits img {
     display: block; /* display image to set at max width */
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto; /* browser to define margin */
-    max-width: 150px;
-}
 
 .search-engine-optimization {
     margin-bottom: 20px;
@@ -185,32 +169,16 @@ a {
     font-size: 20px;
 }
 
-.search-engine-optimization img {
+.content img {
     max-height: 200px; /* Set height to max of 200px; */
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
 
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 footer {
     padding: 20px;
