--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,19 +106,9 @@ a {
     
 }
 
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;  /* space below text section */
     color: #ffffff; /* set text colour to white */
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
 }
 
 .benefits h3 {
@@ -132,7 +122,7 @@ a {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+#search-engine-optimization, #online-reputation-management, #social-media-marketing  {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px; /* Set height of section to 300px; */
@@ -142,25 +132,6 @@ a {
     font-size: 20px;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
-    background-color: #0072bb;
-    color: #ffffff;
-    font-size: 20px;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
-    background-color: #0072bb;
-    color: #ffffff;
-    font-size: 20px;
-}
 
 .content img {
     max-height: 200px; /* Set height to max of 200px; */
